<!--TO Make the entire content scrollable-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="fill_parent" android:layout_width="fill_parent" >
    <!-- Layout for displaying one below another -->
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_horizontal"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MavLoginActivity">



        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:weightSum="1">
                <ImageView android:id="@+id/loginImage"
                    android:layout_width="match_parent"
                    android:layout_height="139dp" android:src="@mipmap/loginimage"
                    android:layout_weight="0.15"  />
               <!-- <TextView android:id = "@+id/errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  android:textColor="#DC143C" />-->

                <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true"
                    android:layout_marginBottom="8dp" android:visibility="gone" android:layout_gravity="center" />

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"  android:layout_marginTop="16dp" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"

                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"  />

               <!-- <EditText android:id="@+id/serverAddress" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_serverAddress"

                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textAutoComplete"
                    android:maxLines="1" android:singleLine="true"  />-->

                <!-- android:imeActionId="@+id/login"-->


                <Button android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                     />
                <Button android:id="@+id/email_sign_up_button"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="@string/action_sign_up"  android:onClick="onSignUpClick"  />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</ScrollView>


